css updates to include file icon for files and spacing/overlap fix for page submenus

--- a/webroot/css/li3_docs.css
+++ b/webroot/css/li3_docs.css
@@ -129,11 +129,14 @@ body.docs .crumbs h3 {
 
 .article .menu {
 	display: block;
+	padding: .25em;
+	background: rgba(0,0,0,.05);
+	-moz-border-radius: .35em;
+	-webkit-border-radius: .35em;
+	border-radius: .35em;
 	position: absolute;
-	top: 0;
-	right: 0;
-	margin: 1em 0px 0.5em;
-	padding: 2em 2% 0 0;
+	top: 3.5em;
+	right: 2%;
 }
 
 .article .menu a {
@@ -150,6 +153,9 @@ body.docs .crumbs h3 {
 	text-decoration: none;
 	line-height: 1em;
 }
+.article .menu a:first-child {
+	margin-left: 0 !important;
+}
 .article .menu a:hover {
 	color: black;
 	background: #f5f5f5;
@@ -161,6 +167,10 @@ body.docs .crumbs h3 {
 }
 .article #parent {
 	padding-top: 0;
+	height: 1.5em;
+}
+.article #parent + .section {
+	padding-top: 2em;
 }
 .article .section:last-child {
 	padding-bottom: 2em;
@@ -255,6 +265,9 @@ body.docs .crumbs h3 {
 .crumbs .type.property {
 	background-image: url("http://lithify.me/img/icons/silk/cog.png");
 }
+.crumbs .type.file {
+	background-image: url("http://lithify.me/img/icons/silk/page_white.png");
+}
 .crumbs .type span::after {
 	content: ':';
 }
@@ -298,7 +311,10 @@ ul.parameters {
 	padding: .1em 0 .1em 26px;
 }
 .children > li.class {
-	background: url("http://lithify.me/img/icons/silk/brick.png") no-repeat 0 6px;
+	background-image: url("http://lithify.me/img/icons/silk/brick.png");
+}
+.children > li.file {
+	background-image: url("http://lithify.me/img/icons/silk/page_white.png");
 }
 .properties > li {
 	background: url("http://lithify.me/img/icons/silk/cog.png") no-repeat 0 6px;
